--- a/index.html
+++ b/index.html
@@ -712,6 +712,15 @@
             // 文言文數據 - 您可以在此處添加更多篇章
             const passages = {
 
+                '測試': {
+                    title: '《測試》（節錄）',
+                    author: '小明',
+                    category: '中一',
+                    paragraphs: [
+                        '測試版本'
+                    ]
+                },
+
                 '人間詞話': {
                     title: '《人間詞話》（節錄）',
                     author: '王國維',
