--- a/index.html
+++ b/index.html
@@ -8559,16 +8559,16 @@ function displayAchievements() {
                     'tireless': { colors: { center: '#1E3A8A', middle: '#1E40AF', outer: '#1D4ED8' }, border: '#38BDF8' },
                     'nightOwl': { colors: { center: '#3E2723', middle: '#33211B', outer: '#2E1B15' }, border: '#4E342E' },
                     'badDigestion': { colors: { center: '#E65100', middle: '#D84315', outer: '#BF360C' }, border: '#BF360C' },
-                    'dryEyes': { colors: { center: '#0288D1', middle: '#0277BD', outer: '#01579B' }, border: '#0277BD' },
-                    'nightOwlKing': { colors: { center: '#3E2723', middle: '#3E2723', outer: '#3E2723' }, border: '#5D4037' },
-                    'focusOnEating': { colors: { center: '#BF360C', middle: '#BF360C', outer: '#BF360C' }, border: '#E65100' },
+                    'dryEyes': { colors: { center: '#FFCC80', middle: '#FFA726', outer: '#EF6C00' }, border: '#0277BD' },
+                    'nightOwlKing': { colors: { center: '#5D4037', middle: '#3E2723', outer: '#1B0000' }, border: '#5D4037' },
+                    'focusOnEating': { colors: { center: '#FFFFFF', middle: '#FFD0B0', outer: '#FF8A65' }, border: '#E65100' },
                     
                     // 冒險之路
-                    'adventure1': { colors: { center: '#90CAF9', middle: '#64B5F6', outer: '#42A5F5' }, border: '#90CAF9' },
-                    'adventure2': { colors: { center: '#81C784', middle: '#66BB6A', outer: '#4CAF50' }, border: '#4CAF50' },
-                    'adventure3': { colors: { center: '#FF8A65', middle: '#FF7043', outer: '#F4511E' }, border: '#F4511E' },
-                    'adventure4': { colors: { center: '#9575CD', middle: '#7E57C2', outer: '#673AB7' }, border: '#673AB7' },
-                    'adventure5': { colors: { center: '#FFD54F', middle: '#FFCA28', outer: '#FFC107' }, border: '#FFC107' },
+                    'adventure1': { colors: { center: '#B3E5FC', middle: '#4FC3F7', outer: '#0288D1' }, border: '#90CAF9' },
+                    'adventure2': { colors: { center: '#EF5350', middle: '#E53935', outer: '#C62828' }, border: '#4CAF50' },
+                    'adventure3': { colors: { center: '#FFD54F', middle: '#FFC107', outer: '#FFA000' }, border: '#F4511E' },
+                    'adventure4': { colors: { center: '#BA68C8', middle: '#AB47BC', outer: '#8E24AA' }, border: '#673AB7' },
+                    'adventure5': { colors: { center: '#A5D6A7', middle: '#81C784', outer: '#4CAF50' }, border: '#FFC107' },
                     
                     // 挫敗之路
                     'defeat1': { colors: { center: '#B39DDB', middle: '#9575CD', outer: '#7E57C2' }, border: '#7E57C2' },
