--- a/index.html
+++ b/index.html
@@ -5151,8 +5151,8 @@ passageHeader.addEventListener('click', function() {
                                 infoModalContent.innerHTML = `
                                     <div class="space-y-4">
                                         <div class="flex flex-col items-center mb-4">
-                                            <div class="w-20 h-20 bg-amber-100 dark:bg-amber-800 rounded-full flex items-center justify-center text-2xl text-amber-800 dark:text-amber-100 mb-2">
-                                                <i class="fas fa-user"></i>
+                                            <div class="w-20 h-20 bg-amber-100 dark:bg-amber-800 rounded-full flex items-center justify-center text-2xl text-amber-800 dark:text-amber-100 mb-2 overflow-hidden\">
+                                            <div class=\"w-full h-full pixel-avatar\" id=\"iceflower-avatar\"></div>
                                             </div>
                                             <h3 class="text-lg font-medium">IG：@chl____chl</h3>
                                             <p class="text-gray-500 dark:text-gray-400 text-sm">瀝源邨校 中文科老師</p>
