--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                </button>
                <button data-section="version" class="settings-option py-3 px-4 bg-gray-50 dark:bg-gray-700 rounded-lg flex items-center hover:bg-gray-100 dark:hover:bg-gray-600">
                <i class="fas fa-code-branch text-green-500 mr-3"></i>
-               <span class="text-gray-800 dark:text-gray-200 font-semibold">版本資訊</span>
+               <span class="text-gray-800 dark:text-gray-200 font-semibold">版本資訊（v1.5重大更新）</span>
                </button>
                <button data-section="about" class="settings-option py-3 px-4 bg-gray-50 dark:bg-gray-700 rounded-lg flex items-center hover:bg-gray-100 dark:hover:bg-gray-600">
                <i class="fas fa-user text-blue-500 mr-3"></i>
