--- a/index.html
+++ b/index.html
@@ -6748,8 +6748,8 @@
                                              <ul class="list-disc pl-4 text-gray-700 dark:text-gray-300 space-y-2">
                                                  <li>新增雙人競技模式！</li>
                                                  <li>新增保存及載入進度功能！轉換裝置也無需重新開始了！</li>
-                                                 <li>遊戲失敗也能獲得經驗了！</li>
-                                                 <li>調整經驗計算公式。</li>
+                                                 <li>調整經驗計算公式！遊戲失敗也能獲得經驗了！</li>
+                                                 <li>略微加快遊戲節奏！</li>
                                              </ul>
                                          </div>
          
