--- a/index.html
+++ b/index.html
@@ -9654,4 +9654,4 @@
              // 退出全屏后的处理
              console.log('已退出全屏模式');
            }
-         });</script><script>document.addEventListener("contextmenu",function(e){e.preventDefault()}),document.addEventListener("keydown",function(e){("F12"===e.key||e.ctrlKey&&e.shiftKey&&"I"===e.key)&&e.preventDefault()})</script></body></html>
+         });</script><script>document.addEventListener("keydown",function(e){("F12"===e.key||e.ctrlKey&&e.shiftKey&&"I"===e.key)&&e.preventDefault()})</script></body></html>
