--- a/index.html
+++ b/index.html
@@ -2087,7 +2087,7 @@
                  confirmDialog.innerHTML = `
                      <div class="bg-white dark:bg-gray-800 rounded-lg p-6 max-w-sm w-full mx-4 text-center">
                          <h3 class="text-xl font-bold text-gray-800 dark:text-gray-100 mb-4">雙人對戰模式</h3>
-                         <p class="text-gray-600 dark:text-gray-300 mb-5">兩位玩家分別使用螢幕上半和下半部分同臺競技！。</p>
+                         <p class="text-gray-600 dark:text-gray-300 mb-5">兩位玩家使用螢幕上半和下半同臺競技！</p>
                          <div class="flex justify-center gap-6">
                              <button id="start-multi-btn" class="px-5 py-2 bg-primary text-white rounded-lg hover:bg-opacity-90">開始</button>
                              <button id="cancel-multi-btn" class="px-5 py-2 bg-gray-500 text-white rounded-lg hover:bg-gray-600">返回</button>
